[gd_scene load_steps=8 format=2]

[ext_resource path="res://app/assets/sprites/player/playerFrames.tres" type="SpriteFrames" id=1]
[ext_resource path="res://app/objects/entities/scripts/player.gd" type="Script" id=2]
[ext_resource path="res://app/objects/entities/scripts/villainMovement.gd" type="Script" id=3]
[ext_resource path="res://app/objects/entities/scripts/heroMovement.gd" type="Script" id=4]
[ext_resource path="res://app/assets/audio/sfx/footstep.wav" type="AudioStream" id=5]
[ext_resource path="res://app/assets/audio/sfx/transformToWerewolf.wav" type="AudioStream" id=6]

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 1
emission_sphere_radius = 1.48
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 8.0
initial_velocity_random = 0.17
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
color = Color( 0.0470588, 0.701961, 0.717647, 1 )
anim_offset = 0.26

[node name="player" type="KinematicBody2D"]
scale = Vector2( 0.2, 0.2 )
script = ExtResource( 2 )

[node name="heroMovement" type="Node" parent="."]
script = ExtResource( 4 )

[node name="villainMovement" type="Node" parent="."]
script = ExtResource( 3 )

[node name="transformDelay" type="Timer" parent="."]
wait_time = 2.1
one_shot = true

[node name="transformDelay2" type="Timer" parent="."]
wait_time = 3.5
one_shot = true

[node name="playerSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )
animation = "hero"
frame = 1
playing = true
centered = false

[node name="transformParticle" type="Particles2D" parent="."]
position = Vector2( 160, 160 )
scale = Vector2( 7, 7 )
emitting = false
amount = 10000
lifetime = 2.8
one_shot = true
explosiveness = 0.22
randomness = 0.4
process_material = SubResource( 1 )

[node name="footstepSFX1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -5.746

[node name="transformSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0
[connection signal="timeout" from="transformDelay" to="." method="_on_transformDelay_timeout"]
[connection signal="timeout" from="transformDelay2" to="." method="_on_transformDelay_timeout"]
